--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -10,13 +10,39 @@
 
 	<body>
 		<h1>Rango says...</h1>
+
+		<div>hey there partner!</div>
+
 		<div>
-			hey there partner! <br />
-			<strong>{{ boldmessage }}</strong><br />
+		<h2>Categories</h2>
+		{% if categories %}
+		<ul>
+			{% for category in categories %}
+				<li><a href="/rango/category/{{ category.slug }}">{{ category.name }}</a></li>
+			{% endfor %}
+		</ul>
+		{% else %}
+			<strong>There are no categories present.</strong>
+		{% endif %}
 		</div>
+
 		<div>
-			<a href="/rango/about/">About</a><br />
-			<img src="{% static "images/a.jpg" %}" alt="Man aiming a shotgun." />
+		<h2>Most Viewed Pages</h2>
+		{% if most_viewed_pages %}
+		<ul>
+			{% for page in most_viewed_pages %}
+				<li><a href="{{ page.url }}">{{ page.title }}</a></li>
+			{% endfor %}
+		</ul>
+		{% else %}
+			<strong>There are no viewed pages.</strong>
+		{% endif %}
+		</div>
+
+		<div>
+			<a href="/rango/about/">About Rango</a><br />
+			<a href="/rango/add_category/">Add a New Category</a><br />
+			<img src="{% static "images/rango.jpg" %}" alt="Picture of Rango" />
 		</div>
 	</body>
 
